[gd_scene load_steps=5 format=3 uid="uid://cgyd272rdf5cl"]

[ext_resource type="Script" path="res://Enemy/enemy.gd" id="1_ck0ro"]
[ext_resource type="Texture2D" uid="uid://b28xx3wcrqkm2" path="res://Textures/Enemy/Goblins2.png" id="1_u1jj1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yo1qv"]
radius = 8.16176

[sub_resource type="CircleShape2D" id="CircleShape2D_634pk"]
radius = 26.9072

[node name="GoblinMed" type="CharacterBody2D"]
rotation = -0.785398
scale = Vector2(1.5, 1.5)
collision_layer = 3
collision_mask = 2
motion_mode = 1
script = ExtResource("1_ck0ro")
hp_max = 50

[node name="Goblins2" type="Sprite2D" parent="."]
texture_filter = 1
rotation = -0.785398
scale = Vector2(0.098, 0.098)
texture = ExtResource("1_u1jj1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 2)
rotation = -0.785398
shape = SubResource("CircleShape2D_yo1qv")
debug_color = Color(0, 0.6, 0.701961, 0.27451)

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-1.41421, 2.35702)
shape = SubResource("CircleShape2D_634pk")

[node name="HitFlashTimer" type="Timer" parent="."]
wait_time = 0.07
one_shot = true

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="HitFlashTimer" to="." method="_on_hit_flash_timer_timeout"]
